<resources>
    <string name="app_name">INotes</string>
    <string name="edit">Edit</string>
    <string name="folders">Folders</string>
    <string name="notes">Notes</string>
    <string name="search">Search</string>
    <string name="your_note">Your note...</string>
    <string name="text_notes">Notes</string>
    <string name="text_title">Title</string>
    <string name="add_note">add note</string>
    <string name="add_folder">add folder</string>
    <string name="empty_note_warning">Missing text in note</string>
    <string name="note">Note</string>

</resources>