<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotesStorage"
    android:padding="15dp"
    android:background="@color/black">
    <LinearLayout
        android:id="@+id/backToFoldersBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView

            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            app:srcCompat="@drawable/chevronback" />

        <Button
            android:id="@+id/prevPageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            android:text="@string/folders"
            android:textColor="@color/yellowBtn"
            android:textSize="25sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

    <TextView
        android:id="@+id/folders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/text_notes"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backToFoldersBtn" />


    <AutoCompleteTextView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bordersearch"
        android:drawableLeft="@drawable/ic_search"
        android:hint="@string/search"
        android:paddingLeft="6dp"

        android:textColorHint="#5AFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/folders" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="744dp"
        app:layout_constraintTop_toBottomOf="@+id/searchView">


        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/linearNotesGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

    <TextView
        android:id="@+id/addNoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/add_note"
        android:textAlignment="textEnd"
        android:textColor="@color/yellowBtn"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>